deployment-receitas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe
spec:
  selector:
    matchLabels:
      run: recipe
  replicas: 3
  template:
    metadata:
      name: recipe
      labels:
        run: recipe
        app: recipe
    spec:
      volumes:
      - name: "recipe-data"
        hostPath:
          path: "/exports"
      containers:
      - image: haissamfawaz/cookingsqlite:latest
        name: recipe
        volumeMounts:
        - mountPath: "/data"
          name: "recipe-data"
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
