kuard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  selector:
    matchLabels:
      run: kuard
  replicas: 3
  template:
    metadata:
      name: kuard
      labels:
        run: kuard
        app: kuard
    spec:
      volumes:
      - name: "kuard-data"
        hostPath:
          path: "/exports"
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: kuard
        volumeMounts:
        - mountPath: "/data"
          name: "kuard-data"
        resources:
          requests:
            cpu: "500m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
