kuard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  type: NodePort
  selector:
    app: kuard
  ports:
    - protocol: TCP
      port: 8080
