ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "haissam.local.home.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuard-service
            port:
              number: 8080
  - host: "receitas.local.home.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: recipe
            port:
              number: 80
  - host: "grafana.local.home.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: "postgres.local.home.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: postgres
            port:
              number: 5432
